# orderflow_recorder

./: .env.example  .gitignore  ANALYSIS_ROADMAP.md  API_USAGE.md  DATA_AGGREGATION_CONCEPT.md  Dockerfile  FRONTEND_SETUP.md  README.md  client_script.py  deployment_gcp.md  docker-compose.yml  pyproject.toml
src/orderflow_api/: main.py  service.py
src/orderflow_recorder/: __main__.py
src/orderflow_recorder/binance/: __init__.py  ws_client.py
src/orderflow_recorder/config/: settings.py
src/orderflow_recorder/ingest/: __init__.py  runner.py
src/orderflow_recorder/process/: daily_job.py
src/orderflow_recorder/storage/: __init__.py  db.py  gcs_sinks.py  models.py  postgres_sinks.py  sinks.py
src/orderflow_recorder/utils/: logger.py  logging.py
tests/: test_binance_parsers.py  test_ingest_smoke.py  test_smoke.py
