[tool.poetry]
name = "orderflow-recorder"
version = "0.1.0"
description = "Lightweight, extensible service to record Binance USDT-M Futures market data (orderbook + trades) into Postgres, running 24/7."
authors = ["orderflow-recorder maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [{ include = "orderflow_recorder", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.3.0"
websockets = "^12.0"
loguru = "^0.7.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
orderflow-recorder = "orderflow_recorder.ingest.runner:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


