[tool.poetry]
name = "orderflow-recorder"
version = "0.1.0"
description = "Lightweight, extensible service to record Binance USDT-M Futures market data (orderbook + trades) into Postgres, running 24/7."
authors = ["orderflow-recorder maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [
    { include = "orderflow_recorder", from = "src" },
    { include = "orderflow_api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.3.0"
websockets = "^12.0"
loguru = "^0.7.0"
google-cloud-storage = "^2.16.0"
aiohttp = "^3.13.2"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
plotly = "^6.5.0"
requests = "^2.32.5"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
orderflow-recorder = "orderflow_recorder.ingest.runner:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


